Implement NBMF algorithm.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,11 @@
 Package: NDBEC
-Title: What the Package Does (One Line, Title Case)
+Title: Nonparametric denoising and batch effect removal for single cell omics data
 Version: 0.0.0.9000
 Authors@R: 
-    person("First", "Last", , "first.last@example.com", role = c("aut", "cre"),
-           comment = c(ORCID = "YOUR-ORCID-ID"))
-Description: What the package does (one paragraph).
-License: `use_mit_license()`, `use_gpl3_license()` or friends to pick a
-    license
+    person("Mukai", "Wang", , "wangmk@umich.edu", role = c("aut", "cre"),
+           comment = c(ORCID = "0000-0002-1413-1904"))
+Description: Nonparametric denoising and batch effect removal for single cell omics data.
+License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
