--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,10 @@ export(log1exp)
 export(logisticcfR)
 export(penalized_loss)
 importFrom(doParallel,registerDoParallel)
+importFrom(dplyr,"%>%")
+importFrom(dplyr,filter)
+importFrom(dplyr,group_by)
+importFrom(dplyr,slice_sample)
 importFrom(foreach,"%dopar%")
 importFrom(foreach,foreach)
 importFrom(parallel,clusterExport)
